
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion. 

----- V2.5 LIVE (in testing) -----

----- V2.5 RC1 [Pre 1] (2004-08-24) ----

2004-08-23, Kato
  Email error handling cleaned up
    - zentrack_2/includes/egate_utils.php 1.35
    - zentrack_2/includes/zenTrack.class 1.141
    - zentrack_2/www/actions/email.php 1.13
  Added variable fields to the search screen
  Improved date search capabilities
    - zentrack_2/includes/db.class 1.28
    - zentrack_2/includes/login.php 1.24
    - zentrack_2/includes/headerInc.php 1.40
    - zentrack_2/includes/nav.php 1.10
    - zentrack_2/includes/prepareSearchVarfields.php 1.1
    - zentrack_2/includes/varfieldConfig.php 1.1
    - zentrack_2/includes/zen.class 1.25
    - zentrack_2/includes/zenTrack.class 1.141
    - zentrack_2/includes/templates/searchForm.php 1.10
    - zentrack_2/includes/templates/searchList.php 1.13
    - zentrack_2/includes/templates/searchResults.php 1.7
    - zentrack_2/includes/templates/ticket_box.php 1.13
    - zentrack_2/includes/templates/ticket_customBox.php 1.6
    - zentrack_2/install/UPGRADE_mssqlserver.sql 1.11
    - zentrack_2/install/UPGRADE_mysql.sql 1.17
    - zentrack_2/install/UPGRADE_oracle.sql 1.18
    - zentrack_2/install/build_mssqlserver.sql 1.7
    - zentrack_2/install/build_mysql.sql 1.10
    - zentrack_2/install/build_oracle.sql 1.11
    - zentrack_2/install/seed_mssqlserver.sql 1.19
    - zentrack_2/install/seed_mysql.sql 1.30
    - zentrack_2/install/seed_oracle.sql 1.25
  Cleaned up behavior bugs and enhanced js eval capabilities
    - zentrack_2/www/styles.php 1.16
    - zentrack_2/www/ticket.php 1.20
    - zentrack_2/includes/zenTrack.class 1.141
    - zentrack_2/includes/templates/behaviorDetailForm.php 1.5
    - zentrack_2/includes/templates/behaviorForm.php 1.5