@@ -7,6 +7,13 @@
 
 ----- V2.5 LIVE (in testing) -----
 
+2004-08-25, Kato
+  Added htaccess authentication
+  Fixed typo in UPGRADE scripts
+    (sql scripts)
+  Fixed foreach bug
+    (prepareSearchVarfields.php)
+
 ----- V2.5 RC1 [Pre 1] (2004-08-24) ----
 
 2004-08-23, Kato
